<resources>
    <string name="app_name">Calculator</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_divider">/</string>
    <string name="btn_multiply">x</string>
    <string name="btn_equals">=</string>
    <string name="btn_left_arrow">=></string>
    <string name="btn_right_arrow">=></string>
    <string name="btn_open_bracket">(</string>
    <string name="btn_close_bracket">)</string>
    <string name="btn_CE">CE</string>
    <string name="btn_dot">.</string>
    <string name="text_hint"> </string>
</resources>